--- a/course_details_web.html
+++ b/course_details_web.html
@@ -360,7 +360,7 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="img/logo.png" alt="" height="50">
                                 </a>
                             </div>
                             <p>
