--- a/courses.html
+++ b/courses.html
@@ -28,12 +28,9 @@
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
-
-    <!-- header-start -->
-    <header>
+    
+      <!-- header-start -->
+      <header>
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
@@ -79,6 +76,7 @@
         </div>
     </header>
     <!-- header-end -->
+
     <!-- header-end -->
         <!-- bradcam_area_start -->
         <div class="bradcam_area breadcam_bg overlay2">
@@ -378,7 +376,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <div class="popup_inner">
                 <div class="logo text-center">
                     <a href="#">
-                        <img src="img/form-logo.png" alt="">
+                        <img src="img/logo.png" alt="" height="50">
                     </a>
                 </div>
                 <h3>Sign in</h3>
