--- a/index.html
+++ b/index.html
@@ -104,113 +104,64 @@
     </div>
     <!-- slider_area_end -->
 
-    <!-- about_area_start -->
-    <div class="about_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-5 col-lg-6">
-                    <div class="single_about_info">
-                        <h3>Over 7000 Tutorials <br>
-                            from 20 Courses</h3>
-                        <p>Our set he for firmament morning sixth subdue darkness creeping gathered divide our let god
-                            moving. Moving in fourth air night bring upon you’re it beast let you dominion likeness open
-                            place day great wherein heaven sixth lesser subdue fowl </p>
-                        <a href="courses.html" class="boxed_btn">Enroll a Course</a>
-                    </div>
-                </div>
-                <div class="col-xl-6 offset-xl-1 col-lg-6">
-                    <div class="about_tutorials">
-                        <div class="courses">
-                            <div class="inner_courses">
-                                <div class="text_info">
-                                    <span>20+</span>
-                                    <p> Courses</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="courses-blue">
-                            <div class="inner_courses">
-                                <div class="text_info">
-                                    <span>7638</span>
-                                    <p> Courses</p>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="courses-sky">
-                            <div class="inner_courses">
-                                <div class="text_info">
-                                    <span>230+</span>
-                                    <p> Courses</p>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- our_courses_start -->
     <div class="our_courses">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center mb-100">
-                        <h3>Our Course Speciality</h3>
-                        <p>Your domain control panel is designed for ease-of-use and <br>
-                            allows for all aspects of your domains.
-                        </p>
+                        <h3>Why us?</h3>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-3 col-md-6 col-lg-6">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon">
                             <i class="flaticon-art-and-design"></i>
                         </div>
-                        <h3>Premium Quality</h3>
                         <p>
-                            Your domain control panel is designed for ease-of-use <br> and <br>
-                            allows for all aspects of
+                            Learn current standard industry applications.
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-lg-6">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon blue">
                             <i class="flaticon-business-and-finance"></i>
                         </div>
-                        <h3>Premium Quality</h3>
                         <p>
-                            Your domain control panel is designed for ease-of-use <br> and <br>
-                            allows for all aspects of
+                            Have face-to-face live interaction with India's Silicon Valley Experts.
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-lg-6">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon">
                             <i class="flaticon-premium"></i>
                         </div>
-                        <h3>Premium Quality</h3>
                         <p>
-                            Your domain control panel is designed for ease-of-use <br> and <br>
-                            allows for all aspects of
+                            Live interaction to guide you from the path to Ameteur.
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-lg-6">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon gradient">
                             <i class="flaticon-crown"></i>
                         </div>
-                        <h3>Premium Quality</h3>
                         <p>
-                            Your domain control panel is designed for ease-of-use <br> and <br>
-                            allows for all aspects of
+                            1:1 Project Guidance to showcase all your skills.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="single_course text-center">
+                        <div class="icon gradient">
+                            <i class="flaticon-crown"></i>
+                        </div>
+                        <p>
+                            Be Placement Ready.
                         </p>
                     </div>
                 </div>
