--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="slider_info">
-                            <h3>Learn your <br>
-                                Favorite Course <br>
-                                From Online</h3>
-                            <a href="courses.html" class="boxed_btn">Browse Our Courses</a>
+                            <h2> Learn industry standard<br>
+                                    technologies from the best of<br>
+                                    India's Silicon Valley experts<br>
+                                     right at your comfort </h2><br>
+                            <a href="courses.html" class="boxed_btn">BROWSE</a>
                         </div>
                     </div>
                 </div>
@@ -103,6 +104,17 @@
         </div>
     </div>
     <!-- slider_area_end -->
+<br>
+    <!-- questions_area_start-->
+     <div class="question_area">
+        <span> <h3>Looking to start my career at the right foot?</h3></span>
+        <span> <h3>Don't exactly know where to start from and where to place milestones?</h3></span>
+        <span> <h3>What domains I should specialize in?</h3></span>
+        <span> <h3>What's trending in the industries and what are their req.?</h3></span>
+        <span> <h3>How much will I get paid if I expertise in any particular domain?</h3></span>
+        <span> <h3>Will I be in demand after 3-5 years?</h3></span>        
+     </div>
+   <!--questions_area_end-->
 
     <!-- our_courses_start -->
     <div class="our_courses">
