--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     technologies from the best of<br>
                                     India's Silicon Valley experts<br>
                                      right at your comfort </h2><br>
-                            <a href="courses.html" class="boxed_btn">BROWSE</a>
+                            <a href="courses.html" class="boxed_btn browse_button">BROWSE</a>
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="more_courses text-center">
-                                            <a href="courses.html" class="boxed_btn_rev">More Courses</a>
+                                            <a href="courses.html" class="boxed_btn_rev more_button">More Courses</a>
                                         </div>
                                     </div>
                                 </div>
