Changed header, added scroll bar, button gradient (previous gradient)

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                         </div>
                     </div>
                 </div>
+                <!-- Progress scroll bar-->
+                <div class="progress-container">
+                    <div class="progress-bar" id="myBar"></div>
+                </div> 
             </div>
         </div>
     </header>
@@ -524,6 +528,20 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
     <!-- JS here -->
+
+    <!-- scrolling js -->
+    <script>
+        // When the user scrolls the page, execute myFunction 
+        window.onscroll = function() {myFunction()};
+
+        function myFunction() {
+          var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+          var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+          var scrolled = (winScroll / height) * 100;
+          document.getElementById("myBar").style.width = scrolled + "%";
+        }
+    </script>
+
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/popper.min.js"></script>
