created a extra non changeable file to keep a backup index, and added some class names (uspbox)

--- a/indexCopy(dontchange).html
+++ b/indexCopy(dontchange).html
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm uspbox">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon">
                             <i class="flaticon-art-and-design"></i>
@@ -141,7 +141,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm uspbox">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon blue">
                             <i class="flaticon-business-and-finance"></i>
@@ -151,7 +151,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm uspbox">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon">
                             <i class="flaticon-premium"></i>
@@ -161,7 +161,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm uspbox">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon gradient">
                             <i class="flaticon-crown"></i>
@@ -171,7 +171,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm uspbox">
+                <div class="col-sm">
                     <div class="single_course text-center">
                         <div class="icon gradient">
                             <i class="flaticon-crown"></i>
