--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <div class="container">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-xl-6 col-md-6">
-                        <div class="illastrator_png">
+                       <!--<div class="illastrator_png">
                             <img src="img/banner/edu_ilastration.png" alt="">
-                        </div>
+                        </div>-->
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="slider_info">
