--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <!-- header-start -->
     <header>
         <div class="header-area ">
-            <div id="sticky-header" class="main-header-area">
+            <div id="sticky-header" class="main-header-area headerht">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="" height="50" weight="60">
+                                    <img src="img/logo.png" alt="" height="40" weight="48">
                                 </a>
                             </div>
                         </div>
@@ -93,6 +93,8 @@
                        <!--<div class="illastrator_png">
                             <img src="img/banner/edu_ilastration.png" alt="">
                         </div>-->
+                        <div class="adspace1">
+                        </div>
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="slider_info">
@@ -108,8 +110,8 @@
         </div>
     </div>
     <!-- slider_area_end -->
-<br>
-    <!-- questions_area_start-->
+
+    <!-- questions_area_start
      <div class="question_area">
         <span> <h3>Looking to start my career at the right foot?</h3></span>
         <span> <h3>Don't exactly know where to start from and where to place milestones?</h3></span>
@@ -118,7 +120,20 @@
         <span> <h3>How much will I get paid if I expertise in any particular domain?</h3></span>
         <span> <h3>Will I be in demand after 3-5 years?</h3></span>        
      </div>
-   <!--questions_area_end-->
+    questions_area_end-->
+
+    <!-- start testimonials new -->
+    <div class="testr">
+      <div class="testc" style="background-color:#aaa;">
+        <h3>Testimonials</h3>
+        <h5>"lorem ipsum .............."
+      </div>
+      <div class="testc" style="background-color:#bbb;">
+        <h2>Student Reviews</h2>
+      </div>
+    </div>
+    <!-- end testimonials new->
+
 
     <!-- our_courses_start -->
     <div class="our_courses">
@@ -185,8 +200,6 @@
         </div>
     </div>
     <!-- our_courses_end -->
-
-    <!-- about_area_end -->
 
     <!-- popular_courses_start -->
     <div class="popular_courses">
@@ -323,13 +336,10 @@
                                     <img src="img/testmonial/author_img.png" alt="">
                                 </div>
                                 <p>
-                                    "Working in conjunction with humanitarian aid <br> agencies we have supported
-                                    programmes to <br>
-                                    alleviate.
-                                    human suffering.
-
+                                    Testimonial <br>
+                                    No. 1 with the persons picture
                                 </p>
-                                <span>- Jquileen</span>
+                                <span>- Person's name</span>
                             </div>
                         </div>
                     </div>
@@ -344,13 +354,10 @@
                                     <img src="img/testmonial/author_img.png" alt="">
                                 </div>
                                 <p>
-                                    "Working in conjunction with humanitarian aid <br> agencies we have supported
-                                    programmes to <br>
-                                    alleviate.
-                                    human suffering.
-
+                                    Testimonial <br>
+                                    No. 2 with the persons picture
                                 </p>
-                                <span>- Jquileen</span>
+                                <span>- Person's Name</span>
                             </div>
                         </div>
                     </div>
@@ -359,173 +366,6 @@
         </div>
     </div>
     <!-- testimonial_area_end -->
-
-    <!-- subscribe_newsletter_Start -->
-    <div class="subscribe_newsletter">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-6 col-lg-6">
-                    <div class="newsletter_text">
-                        <h3>Subscribe Newsletter</h3>
-                        <p>Your domain control panel is designed for ease-of-use and allows for all aspects of your</p>
-                    </div>
-                </div>
-                <div class="col-xl-5 offset-xl-1 col-lg-6">
-                    <div class="newsletter_form">
-                        <h4>Your domain control panel is</h4>
-                        <form action="#" class="newsletter_form">
-                            <input type="text" placeholder="Enter your mail">
-                            <button type="submit">Sign Up</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- subscribe_newsletter_end -->
-
-  
-
-
-    <!-- footer -->
-    <footer class="footer footer_bg_1">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 col-md-6 col-lg-4">
-                        <div class="footer_widget">
-                            <div class="footer_logo">
-                                <a href="#">
-                                    <img src="img/logo.png" alt="" height="50">
-                                </a>
-                            </div>
-                            <p>
-                                Firmament morning sixth subdue darkness creeping gathered divide our let god moving.
-                                Moving in fourth air night bring upon it beast let you dominion likeness open place day
-                                great.
-                            </p>
-                            <div class="socail_links">
-                                <ul>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-twitter-alt"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-instagram"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-youtube-play"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Courses
-                            </h3>
-                            <ul>
-                                <li><a href="#">Wordpress</a></li>
-                                <li><a href="#"> Photoshop</a></li>
-                                <li><a href="#">Illustrator</a></li>
-                                <li><a href="#">Adobe XD</a></li>
-                                <li><a href="#">UI/UX</a></li>
-                            </ul>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Resourches
-                            </h3>
-                            <ul>
-                                <li><a href="#">Free Adobe XD</a></li>
-                                <li><a href="#">Tutorials</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#"> About</a></li>
-                                <li><a href="#"> Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Address
-                            </h3>
-                            <p>
-                                200, D-block, Green lane USA <br>
-                                +10 367 467 8934 <br>
-                                edumark@contact.com
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="copy-right_text">
-            <div class="container">
-                <div class="footer_border"></div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <p class="copy_right text-center">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- footer -->
-
-
-    <!-- form itself end-->
-    <form id="test-form" class="white-popup-block mfp-hide">
-        <div class="popup_box ">
-            <div class="popup_inner">
-                <div class="logo text-center">
-                    <a href="#">
-                        <img src="img/form-logo.png" alt=" "  height="50">
-                    </a>
-                </div>
-                <h3>Sign in</h3>
-                <form action="#">
-                    <div class="row">
-                        <div class="col-xl-12 col-md-12">
-                            <input type="email" placeholder="Enter email">
-                        </div>
-                        <div class="col-xl-12 col-md-12">
-                            <input type="password" placeholder="Password">
-                        </div>
-                        <div class="col-xl-12">
-                            <button type="submit" class="boxed_btn_orange">Sign in</button>
-                        </div>
-                    </div>
-                </form>
-                <p class="doen_have_acc">Don’t have an account? <a class="dont-hav-acc" href="#test-form2">Sign Up</a>
-                </p>
-            </div>
-        </div>
-    </form>
-    <!-- form itself end -->
-
-    
-    <!-- form itself end -->
-
 
     <!-- JS here -->
 
