Added bg, and vertica line instead of two cards

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
 				<h2>Testimonials</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Illo quod nemo ratione itaque dolores laudantium error vero laborum blanditiis nostrum.Illo quod nemo ratione itaque dolores laudantium error vero laborum blanditiis nostrum.Illo quod nemo ratione itaque dolores laudantium error vero laborum blanditiis nostrum.</p>
 			</div>
+
+			<span class="vertical-line"></span>
 			
 			<div class="column c2">
 				<h2>Student reviews</h2>
